; ModuleID = '/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_semaphore.c_LWP_SemInit.c'
source_filename = "/home/carl/AnghaBench/RetroArch/wii/libogc/libogc/extr_semaphore.c_LWP_SemInit.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i32, i32 }
%struct.TYPE_7__ = type { %struct.TYPE_6__, i32 }
%struct.TYPE_6__ = type { i32 }

@LWP_SEMA_MODEFIFO = common dso_local global i32 0, align 4
@LWP_OBJTYPE_SEM = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @LWP_SemInit(i64* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i64*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca %struct.TYPE_8__, align 4
  %9 = alloca %struct.TYPE_7__*, align 8
  store i64* %0, i64** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i64*, i64** %5, align 8
  %11 = icmp ne i64* %10, null
  br i1 %11, label %13, label %12

12:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %38

13:                                               ; preds = %3
  %14 = call %struct.TYPE_7__* (...) @__lwp_sema_allocate()
  store %struct.TYPE_7__* %14, %struct.TYPE_7__** %9, align 8
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %16 = icmp ne %struct.TYPE_7__* %15, null
  br i1 %16, label %18, label %17

17:                                               ; preds = %13
  store i32 -1, i32* %4, align 4
  br label %38

18:                                               ; preds = %13
  %19 = load i32, i32* %7, align 4
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %8, i32 0, i32 1
  store i32 %19, i32* %20, align 4
  %21 = load i32, i32* @LWP_SEMA_MODEFIFO, align 4
  %22 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %8, i32 0, i32 0
  store i32 %21, i32* %22, align 4
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 1
  %25 = load i32, i32* %6, align 4
  %26 = call i32 @__lwp_sema_initialize(i32* %24, %struct.TYPE_8__* %8, i32 %25)
  %27 = load i32, i32* @LWP_OBJTYPE_SEM, align 4
  %28 = call i32 @LWP_OBJMASKTYPE(i32 %27)
  %29 = load %struct.TYPE_7__*, %struct.TYPE_7__** %9, align 8
  %30 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %29, i32 0, i32 0
  %31 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 4
  %33 = call i32 @LWP_OBJMASKID(i32 %32)
  %34 = or i32 %28, %33
  %35 = sext i32 %34 to i64
  %36 = load i64*, i64** %5, align 8
  store i64 %35, i64* %36, align 8
  %37 = call i32 (...) @__lwp_thread_dispatchenable()
  store i32 0, i32* %4, align 4
  br label %38

38:                                               ; preds = %18, %17, %12
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local %struct.TYPE_7__* @__lwp_sema_allocate(...) #1

declare dso_local i32 @__lwp_sema_initialize(i32*, %struct.TYPE_8__*, i32) #1

declare dso_local i32 @LWP_OBJMASKTYPE(i32) #1

declare dso_local i32 @LWP_OBJMASKID(i32) #1

declare dso_local i32 @__lwp_thread_dispatchenable(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
